[gd_scene load_steps=8 format=3 uid="uid://bsst8g1p1hv4g"]

[ext_resource type="Script" path="res://Scripts/Entities/SpeedPad.gd" id="1_3lh3c"]
[ext_resource type="Texture2D" uid="uid://dgo1fnsshoyl6" path="res://Assets/Sprites/Levels/TestLevel/zoomer.png" id="2_38kow"]
[ext_resource type="Texture2D" uid="uid://bdp0vjvd3s2lq" path="res://Assets/Sprites/Levels/TestLevel/belt.png" id="3_dvo3p"]
[ext_resource type="Script" path="res://Scripts/SpeedModifier.gd" id="4_4rxsr"]
[ext_resource type="Script" path="res://Scripts/SpeedCollider.gd" id="4_cqg4u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gs2n5"]
size = Vector2(50, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lxcr"]
size = Vector2(50, 4)

[node name="SpeedPad" type="Node2D"]
script = ExtResource("1_3lh3c")

[node name="Belt" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="BeltEntrance" type="Sprite2D" parent="Belt"]
texture = ExtResource("2_38kow")

[node name="BeltSprite" type="Sprite2D" parent="Belt"]
unique_name_in_owner = true
texture_repeat = 2
texture = ExtResource("3_dvo3p")
offset = Vector2(16, 0)
region_enabled = true

[node name="BeltExit" type="Sprite2D" parent="Belt"]
unique_name_in_owner = true
texture = ExtResource("2_38kow")
offset = Vector2(32, 0)

[node name="BeltCollider" type="CollisionShape2D" parent="Belt"]
unique_name_in_owner = true
position = Vector2(16, -0.5)
shape = SubResource("RectangleShape2D_gs2n5")

[node name="SpeedCollider" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("4_cqg4u")

[node name="SpeedCollisionShape" type="CollisionShape2D" parent="SpeedCollider"]
unique_name_in_owner = true
position = Vector2(16, -9)
shape = SubResource("RectangleShape2D_4lxcr")

[node name="SpeedModifier" type="Node" parent="SpeedCollider"]
unique_name_in_owner = true
script = ExtResource("4_4rxsr")
multiplier = 1.5
